--- a/Module1A/Module1A.vcxproj
+++ b/Module1A/Module1A.vcxproj
@@ -77,7 +77,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTestLibraryDependencies\ModAAConf1\MODE0;LibraryDependencies\ModAAConf1\MODE1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>LibraryDependencies\ModAAConf1\MODE0;C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest;LibraryDependencies\ModAAConf1\MODE1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>ConfigTest.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -117,15 +117,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="blaFolder\bla.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SomeLibraryClass.cpp" />
+    <ClCompile Include="Config\mainCG.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="blaFolder\bla.h" />
     <ClInclude Include="Configuration.h" />
     <ClInclude Include="Configuration4.h" />
-    <ClInclude Include="ModAConf.h" />
+    <ClInclude Include="Config\modaConf.h" />
     <ClInclude Include="SomeLibraryClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
