--- a/ConfigTest/ConfigTest.vcxproj
+++ b/ConfigTest/ConfigTest.vcxproj
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\c# apps\CodeGenerator\CodeGenerator\ConfigTest</OutDir>
+    <OutDir>C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
