--- a/Module1AA/Module1AA.vcxproj
+++ b/Module1AA/Module1AA.vcxproj
@@ -124,7 +124,7 @@
     <ClInclude Include="ClassToInterfaceWith.h" />
     <ClInclude Include="Configuration.h" />
     <ClInclude Include="Configuration4.h" />
-    <ClInclude Include="ModAAConf1.h" />
+    <ClInclude Include="Config\modaaConf.h" />
     <ClInclude Include="SomaLibraryClassM1AA.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
