--- a/Module1A/Module1A.vcxproj
+++ b/Module1A/Module1A.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -18,13 +19,19 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+
+
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3B14D971-332F-4E14-A255-D88CD00879D7}</ProjectGuid>
     <RootNamespace>Module1A</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
+
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+
+
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -51,9 +58,17 @@
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
+
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+
+
   <ImportGroup Label="ExtensionSettings" />
+
+
   <ImportGroup Label="Shared" />
+
+
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
@@ -66,18 +81,25 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+
+
+
   <PropertyGroup Label="UserMacros" />
+
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>c:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\Module1A\Config;c:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\Module1AA\Config;$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest;C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\Module1A\LibraryDependencies\ModAAConf1\Mode0</IncludePath>
     <LibraryPath>C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest;$(LibraryPath)</LibraryPath>
     <SourcePath>C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\Module1A\LibraryDependencies\ModAAConf1\Mode0;$(SourcePath)</SourcePath>
   </PropertyGroup>
+
+
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>LibraryDependencies\ModAAConf1\MODE0;C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest;LibraryDependencies\ModAAConf1\MODE1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)%(AdditionalIncludeDirectories)LibraryDependencies\modaaConf1\MODE0;LibraryDependencies;LibraryDependencies\ModAAConf1\MODE0;C:\Users\Hadi\OneDrive\Documents\VisualStudioprojects\Projects\cSharp\CodeGenerator\CodeGenerator\ConfigTest;LibraryDependencies\ModAAConf1\MODE1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>ConfigTest.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -116,17 +138,32 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+
+
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SomeLibraryClass.cpp" />
     <ClCompile Include="Config\mainCG.cpp" />
+    <ClCompile Include="LibraryDependencies\modaaConf1\MODE0\ClassToInterfaceWith.cpp" />
+    <ClCompile Include="LibraryDependencies\modaaConf1\MODE0\SomaLibraryClassM1AA.cpp" />
+    <ClCompile Include="LibraryDependencies\modaaConf1\MODE0\rg.cpp" />
   </ItemGroup>
+
+
   <ItemGroup>
-    <ClInclude Include="Configuration.h" />
     <ClInclude Include="Configuration4.h" />
     <ClInclude Include="Config\modaConf.h" />
     <ClInclude Include="SomeLibraryClass.h" />
+    <ClInclude Include="Config\ConfigurationCG.h" />
+    <ClInclude Include="LibraryDependencies\modaaConf1\MODE0\ClassToInterfaceWith.h" />
+    <ClInclude Include="LibraryDependencies\modaaConf1\MODE0\SomaLibraryClassM1AA.h" />
+    <ClInclude Include="LibraryDependencies\modaaConf1\MODE0\rg.h" />
   </ItemGroup>
+
+
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+
+
   <ImportGroup Label="ExtensionTargets" />
 </Project>
