--- a/CPPParserLibClang/packages.config
+++ b/CPPParserLibClang/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClangSharp" version="3.8.0" targetFramework="net461" />
+  <package id="Baseclass.Contrib.Nuget.Output" version="2.4.3" targetFramework="net461" />
+  <package id="clang.sharp" version="3.6.2" targetFramework="net461" />
+  <package id="CppSharp" version="0.8.23" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
 </packages>
