--- a/Module1AA/Module1AA.vcxproj.filters
+++ b/Module1AA/Module1AA.vcxproj.filters
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
@@ -18,10 +18,6 @@
     </Filter>
     <Filter Include="bla">
       <UniqueIdentifier>{3360f972-6731-4673-b151-753213d25fc8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="LibraryDependencies">
-      <UniqueIdentifier>{24069734-4403-7748-8680-676543339191}</UniqueIdentifier>
-      <Extensions />
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +49,12 @@
     </ClInclude>
     <ClInclude Include="rg.h">
       <Filter>bla</Filter>
+    </ClInclude>
+    <ClInclude Include="Config\ConfigurationCG.h">
+      <Filter>Config</Filter>
+    </ClInclude>
+    <ClInclude Include="Config\ModConf.h">
+      <Filter>Config</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
