--- a/CodeGenerator/CodeGenerator.csproj
+++ b/CodeGenerator/CodeGenerator.csproj
@@ -84,7 +84,9 @@
     <Compile Include="CMD_Handler\CMDHandlerVSDev.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="FileTemplates\FileTemplateAllLibraryInlcudes.cs" />
     <Compile Include="FileTemplates\FileTemplateBase.cs" />
+    <Compile Include="FileTemplates\FileTemplateCGKeywordDefine.cs" />
     <Compile Include="FileTemplates\FileTemplateLibConf.cs" />
     <Compile Include="FileTemplates\FileTemplateMainCG.cs" />
     <Compile Include="GitHandlerForLibraries\GitHandlerForLibrary.cs" />
@@ -115,6 +117,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CGKeywordDefines.h" />
+    <Content Include="FileTemplates\Files\AllLibraryIncludes.txt" />
+    <Content Include="FileTemplates\Files\CGKeywordDefine.txt" />
     <Content Include="FileTemplates\Files\libconf.txt" />
     <Content Include="FileTemplates\Files\mainCG.txt" />
   </ItemGroup>
