Sync command was added with just light testing and debugging

--- a/CodeGenerator/CodeGenerator.csproj
+++ b/CodeGenerator/CodeGenerator.csproj
@@ -90,11 +90,19 @@
     <Compile Include="FileTemplates\FileTemplateLibConf.cs" />
     <Compile Include="FileTemplates\FileTemplateMainCG.cs" />
     <Compile Include="GitHandlerForLibraries\GitHandlerForLibrary.cs" />
+    <Compile Include="IDESettingXMLs\IAR_XMLs\IARXML_DEPClasses.cs" />
+    <Compile Include="IDESettingXMLs\IAR_XMLs\IARXML_ewdClasses.cs" />
+    <Compile Include="IDESettingXMLs\IAR_XMLs\IARXML_ewpClasses.cs" />
+    <Compile Include="IDESettingXMLs\IAR_XMLs\IARXML_ewtClasses.cs" />
+    <Compile Include="IDESettingXMLs\ISynchronizableProject.cs" />
     <Compile Include="IDESettingXMLs\MyCLCompileFile.cs" />
     <Compile Include="IDESettingXMLs\MyCLIncludeFile.cs" />
     <Compile Include="IDESettingXMLs\MyFilter.cs" />
-    <Compile Include="IDESettingXMLs\MySettingsBase.cs" />
+    <Compile Include="IDESettingXMLs\MyMainSettingsBase.cs" />
     <Compile Include="IDESettingXMLs\MyStaticLib.cs" />
+    <Compile Include="IDESettingXMLs\MySettingsBase.cs" />
+    <Compile Include="IDESettingXMLs\IAR_XMLs\SynchronizeProjectIAR.cs" />
+    <Compile Include="IDESettingXMLs\SynchronizeProjectBase.cs" />
     <Compile Include="IDESettingXMLs\VisualStudioXMLs\Filters\VSFiltersXMLClasses.cs" />
     <Compile Include="IDESettingXMLs\VisualStudioXMLs\MySettingsVS.cs" />
     <Compile Include="IDESettingXMLs\VisualStudioXMLs\VisualStudioXMLClasses.cs" />
